--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,13 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-parent</artifactId>
-    <version>2</version>
+    <version>3</version>
   </parent>
 
   <artifactId>vertx-mail-test</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <!--<name>Vert.x SMTP Service</name> -->
+  <name>Vert.x mail unit test example</name>
 
   <properties>
     <stack.version>3.0.0-SNAPSHOT</stack.version>
@@ -43,31 +43,18 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-mail</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-      <type>test-jar</type>
-      <scope>test</scope>
+      <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
-      <version>4.11</version>
+      <version>4.12</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-unit</artifactId>
       <scope>test</scope>
-      <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
